--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@200;700&family=Montserrat:wght@100;400;700&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/a595bf6ccc.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Portofolio | Elie </title>
 </head>
 
 <body>
